<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Напоминания</string>
    <string name="add_reminder">Добавить напоминание</string>
    <string name="edit_reminder">Редактировать напоминание</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="time">Время</string>
    <string name="repeat">Повторение</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="no_reminders">Нет напоминаний</string>
    <string name="notification_channel_name">Напоминания</string>
    <string name="notification_channel_description">Уведомления для напоминаний</string>

    <string-array name="repeat_options">
        <item>Не повторять</item>
        <item>Каждый день</item>
        <item>Каждую неделю</item>
        <item>Каждый месяц</item>
        <item>Каждый год</item>
        <item>По будням (Пн-Пт)</item>
        <item>По выходным (Сб-Вс)</item>
    </string-array>
</resources>
